--- a/Fake_News_Prediction.ipynb
+++ b/Fake_News_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcGcqcke7jmg4ksqz0T/fK",
+      "authorship_tag": "ABX9TyNI7qRM3ssVDCat0bT0JJdR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1063,7 +1063,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Training the model: **LogesticRegression**"
+        "## **Training the models**"
       ],
       "metadata": {
         "id": "ppEmFVGRsAwj"
